Documented TriangleLayout and Tripeaks. Finished setting up the winning/loosing conditions and implemented them with a pop up menu that allows for replayng, exiting and back to menu